[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{username}}"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmic-space = "0.3.1"
mechtron= "0.3.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
