[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{username}}"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mechtron= "0.3.3"
cosmic-space = "0.3.3"
cosmic-macros = "0.3.3"
lazy_static = "1.4.0"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
